--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,9 @@
 name: Build RTL8188FU Module
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:   # lo puedes lanzar manualmente desde GitHub
   push:
-    branches: [ main ]
+    branches: [ main ] # también se ejecuta en cada push a main
 
 jobs:
   build:
@@ -15,6 +15,7 @@ jobs:
 
       - name: Descargar kernel source (Galaxy A12, 4.19.111)
         run: |
+          # Ajusta esta URL al paquete oficial de Samsung
           wget https://opensource.samsung.com/upload/SM-A125F_Opensource.zip -O kernel.zip
           unzip kernel.zip -d kernel
 
@@ -32,7 +33,7 @@ jobs:
           make -C kernel M=$PWD/driver modules
 
       - name: Guardar artefacto
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: rtl8188fu.ko
           path: driver/*.ko
