--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,39 +1,21 @@
-name: Build RTL8188FU Module
-
-on:
-  workflow_dispatch:   # lo puedes lanzar manualmente desde GitHub
-  push:
-    branches: [ main ] # también se ejecuta en cada push a main
-
+name: Build Kernel Module
+on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-
-      - name: Descargar kernel source (Galaxy A12, 4.19.111)
-        run: |
-          # Ajusta esta URL al paquete oficial de Samsung
-          wget https://opensource.samsung.com/upload/SM-A125F_Opensource.zip -O kernel.zip
-          unzip kernel.zip -d kernel
-
-      - name: Descargar driver RTL8188FU
-        run: |
-          git clone --depth=1 https://github.com/kelebek333/rtl8188fu.git driver
-
-      - name: Instalar toolchain
-        run: sudo apt-get install -y gcc-aarch64-linux-gnu make
-
-      - name: Compilar módulo
-        run: |
-          export ARCH=arm64
-          export CROSS_COMPILE=aarch64-linux-gnu-
-          make -C kernel M=$PWD/driver modules
-
-      - name: Guardar artefacto
-        uses: actions/upload-artifact@v4
+      - name: Clone kernel source
+        run: git clone --depth=1 https://github.com/oscarpavon/Linux-SM-A127M.git kernel
+      - name: Clone rtl8188fu driver
+        run: git clone --depth=1 https://github.com/kelebek333/rtl8188fu.git driver
+      - name: Set up toolchain
+        run: sudo apt-get install gcc-aarch64-linux-gnu make
+      - name: Build kernel (to generate Module.symvers)
+        run: make -C kernel ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- -j$(nproc)
+      - name: Build rtl8188fu module
+        run: make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- -C kernel M=$GITHUB_WORKSPACE/driver modules
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
         with:
           name: rtl8188fu.ko
-          path: driver/*.ko
+          path: driver/rtl8188fu.ko
