--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,21 +1,29 @@
 name: Build Kernel Module
 on: [push]
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+
       - name: Clone kernel source
         run: git clone --depth=1 https://github.com/oscarpavon/Linux-SM-A127M.git kernel
+
       - name: Clone rtl8188fu driver
         run: git clone --depth=1 https://github.com/kelebek333/rtl8188fu.git driver
+
       - name: Set up toolchain
-        run: sudo apt-get install gcc-aarch64-linux-gnu make
+        run: sudo apt-get update && sudo apt-get install -y gcc-aarch64-linux-gnu make
+
       - name: Build kernel (to generate Module.symvers)
         run: make -C kernel ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- -j$(nproc)
+
       - name: Build rtl8188fu module
         run: make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- -C kernel M=$GITHUB_WORKSPACE/driver modules
+
       - name: Upload artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: rtl8188fu.ko
-          path: driver/rtl8188fu.ko
+          path: driver/rtl8188fu/rtl8188fu.ko
